--- a/package.json
+++ b/package.json
@@ -1,31 +1,46 @@
 {
-  "name": "webpack-demo",
-  "version": "0.0.1",
-  "description": "webpack demo",
-  "main": "app/main.js",
-  "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
-    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
-  },
-  "keywords": [
-    "webpack",
-    "react"
-  ],
-  "author": "cp",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^5.8.3",
-    "babel-loader": "^5.3.2",
-    "css-loader": "^0.15.5",
-    "file-loader": "^0.8.4",
-    "node-libs-browser": "^0.5.2",
-    "style-loader": "^0.12.3",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.10.1"
-  },
-  "dependencies": {
-    "react": "^0.13.3",
-    "webpack-dev-server": "^1.10.1"
-  }
+    "name": "Chopper",
+    "version": "0.0.1",
+    "description": "webpack react Node.js express MonogoDB",
+    "main": "app.js",
+    "scripts": {
+        "build": "webpack",
+        "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
+        "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
+    },
+    "engines": {
+        "node": "0.12.4",
+        "npm": "2.10.1"
+    },
+    "keywords": [
+        "webpack",
+        "react"
+    ],
+    "author": "playwolsey",
+    "license": "MIT",
+    "devDependencies": {
+        "babel-core": "^5.8.3",
+        "babel-loader": "^5.3.2",
+        "css-loader": "^0.15.5",
+        "file-loader": "^0.8.4",
+        "node-libs-browser": "^0.5.2",
+        "style-loader": "^0.12.3",
+        "url-loader": "^0.5.6",
+        "webpack": "^1.10.1"
+    },
+    "dependencies": {
+        "react": "^0.13.3",
+        "webpack-dev-server": "^1.10.1",
+        "express": "4.13.1",
+        "express.io": "1.1.13",
+        "async": "1.4.2",
+        "body-parser": "1.13.3",
+        "cookie-parser": "1.3.5",
+        "errorhandler": "1.4.2",
+        "dot": "1.0.3",
+        "mongoose": "4.1.3",
+        "morgan": "1.6.1",
+        "socket.io": "1.3.6",
+        "serve-favicon": "2.3.0"
+    }
 }
