--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "node-libs-browser": "^0.5.2",
         "style-loader": "^0.12.3",
         "url-loader": "^0.5.6",
+        "nodemon": "^1.2.1",
         "webpack": "^1.10.1"
     },
     "dependencies": {
@@ -41,6 +42,7 @@
         "mongoose": "4.1.3",
         "morgan": "1.6.1",
         "socket.io": "1.3.6",
-        "serve-favicon": "2.3.0"
+        "serve-favicon": "2.3.0",
+        "node-jsx": "~0.11.0"
     }
 }
