--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "body-parser": "1.13.3",
         "cookie-parser": "1.3.5",
         "errorhandler": "1.4.2",
-        "dot": "1.0.3",
+        "express-handlebars": "~1.1.0",
         "mongoose": "4.1.3",
         "morgan": "1.6.1",
         "socket.io": "1.3.6",
