--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
         "webpack-dev-server": "^1.10.1",
         "express": "4.13.1",
         "express.io": "1.1.13",
+        "express-dot-engine": "~1.0.7",
         "async": "1.4.2",
         "body-parser": "1.13.3",
         "cookie-parser": "1.3.5",
         "errorhandler": "1.4.2",
-        "express-handlebars": "~1.1.0",
         "mongoose": "4.1.3",
         "morgan": "1.6.1",
         "socket.io": "1.3.6",
