--- a/package.json
+++ b/package.json
@@ -5,9 +5,23 @@
     "main": "app.js",
     "scripts": {
         "build": "webpack",
-        "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
-        "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
+        "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build"
     },
+
+
+"scripts": {
+    "start": "NODE_ENV=production node server/index.js",
+    "dev": "NODE_ENV=development node server/index.js",
+    "devHotLoader": "npm run buildHotLoader && NODE_ENV=devhotloader node server/index.js",
+    "build": "webpack --progress --colors --config ./webpack/webpack.config.js",
+    "buildHotLoader": "webpack --progress --colors --config ./webpack/webpack-hot-dev-server.config.js",
+    "watch": "webpack --watch --progress --config ./webpack/webpack.config.js",
+    "watchHotLoader": "webpack --watch --progress --config ./webpack/webpack-hot-dev-server.config.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "webpack -p --config ./webpack/webpack.config.js"
+},
+
+    
     "engines": {
         "node": "0.12.4",
         "npm": "2.10.1"
