--- a/package.json
+++ b/package.json
@@ -3,25 +3,20 @@
     "version": "0.0.1",
     "description": "webpack react Node.js express MonogoDB",
     "main": "app.js",
+    /*"scripts": {
+      "build": "webpack",
+      "watch": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
+      "dev": "nodemon server.js watch",
+      "start": "NODE_ENV=production node server.js"
+      },*/
     "scripts": {
-        "build": "webpack",
-        "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build"
-    },
-
-
-"scripts": {
-    "start": "NODE_ENV=production node server/index.js",
-    "dev": "NODE_ENV=development node server/index.js",
-    "devHotLoader": "npm run buildHotLoader && NODE_ENV=devhotloader node server/index.js",
-    "build": "webpack --progress --colors --config ./webpack/webpack.config.js",
-    "buildHotLoader": "webpack --progress --colors --config ./webpack/webpack-hot-dev-server.config.js",
-    "watch": "webpack --watch --progress --config ./webpack/webpack.config.js",
-    "watchHotLoader": "webpack --watch --progress --config ./webpack/webpack-hot-dev-server.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "webpack -p --config ./webpack/webpack.config.js"
-},
-
-    
+        "clean": "rm -rf lib",
+        "watch-js": "./node_modules/.bin/babel src -d lib --experimental -w",
+        "dev-server": "node lib/server/webpack",
+        "server": "nodemon lib/server/server",
+        "start": "npm run watch-js & npm run dev-server & npm run server",
+        "build": "npm run clean && ./node_modules/.bin/babel src -d lib --experimental"
+    },  
     "engines": {
         "node": "0.12.4",
         "npm": "2.10.1"
@@ -33,16 +28,21 @@
     "author": "playwolsey",
     "license": "MIT",
     "devDependencies": {
+        "babel": "^5.8.21",
         "babel-core": "^5.8.3",
         "babel-loader": "^5.3.2",
         "css-loader": "^0.15.5",
+        "express": "^4.13.1",
         "file-loader": "^0.8.4",
+        "jade": "^1.11.0",
         "node-libs-browser": "^0.5.2",
+        "nodemon": "^1.4.1",
+        "react-hot-loader": "^1.2.9",
+        "react-router": "^0.13.3",
         "style-loader": "^0.12.3",
         "url-loader": "^0.5.6",
-        "nodemon": "^1.2.1",
-        "webpack-dev-server": "^1.10.1",
-        "webpack": "^1.10.1"
+        "webpack": "^1.12.0",
+        "webpack-dev-server": "^1.10.1"
     },
     "dependencies": {
         "react": "^0.13.3",
