--- a/package.json
+++ b/package.json
@@ -3,19 +3,13 @@
     "version": "0.0.1",
     "description": "webpack react Node.js express MonogoDB",
     "main": "app.js",
-    /*"scripts": {
-      "build": "webpack",
-      "watch": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
-      "dev": "nodemon server.js watch",
-      "start": "NODE_ENV=production node server.js"
-      },*/
     "scripts": {
-        "clean": "rm -rf lib",
-        "watch-js": "./node_modules/.bin/babel src -d lib --experimental -w",
-        "dev-server": "node lib/server/webpack",
-        "server": "nodemon lib/server/server",
+        "clean": "rm -rf bundle",
+        "watch-js": "./node_modules/.bin/babel src -d bundle --experimental -w",
+        "dev-server": "node bundle/server/webpack",
+        "server": "nodemon bundle/server/server",
         "start": "npm run watch-js & npm run dev-server & npm run server",
-        "build": "npm run clean && ./node_modules/.bin/babel src -d lib --experimental"
+        "build": "npm run clean && ./node_modules/.bin/babel src -d bundle --experimental"
     },  
     "engines": {
         "node": "0.12.4",
