--- a/package.json
+++ b/package.json
@@ -1,53 +1,55 @@
 {
-    "name": "Chopper",
-    "version": "0.0.1",
-    "description": "webpack react Node.js express MonogoDB",
-    "main": "app.js",
-    "scripts": {
-        "watch-js": "./node_modules/.bin/babel src -d bundle --experimental -w",
-        "start": "npm run watch-js & npm run dev-server & npm run server",
-        "build": "npm run clean && ./node_modules/.bin/babel src -d bundle --experimental"
-    },  
-    "engines": {
-        "node": "0.12.4",
-        "npm": "2.10.1"
-    },
-    "keywords": [
-        "webpack",
-        "react"
-    ],
-    "author": "playwolsey",
-    "license": "MIT",
-    "devDependencies": {
-        "babel": "^5.8.21",
-        "babel-core": "^5.8.3",
-        "babel-loader": "^5.3.2",
-        "css-loader": "^0.15.5",
-        "express": "^4.13.1",
-        "file-loader": "^0.8.4",
-        "jade": "^1.11.0",
-        "node-libs-browser": "^0.5.2",
-        "nodemon": "^1.4.1",
-        "react-hot-loader": "^1.2.9",
-        "react-router": "^0.13.3",
-        "style-loader": "^0.12.3",
-        "url-loader": "^0.5.6",
-        "webpack": "^1.12.0",
-        "webpack-dev-server": "^1.10.1"
-    },
-    "dependencies": {
-        "react": "^0.13.3",
-        "express": "4.13.1",
-        "express.io": "1.1.13",
-        "express-dot-engine": "~1.0.7",
-        "async": "1.4.2",
-        "body-parser": "1.13.3",
-        "cookie-parser": "1.3.5",
-        "errorhandler": "1.4.2",
-        "mongoose": "4.1.3",
-        "morgan": "1.6.1",
-        "socket.io": "1.3.6",
-        "serve-favicon": "2.3.0",
-        "node-jsx": "~0.11.0"
-    }
+  "name": "Chopper",
+  "version": "0.0.1",
+  "description": "webpack react Node.js express MonogoDB",
+  "main": "app.js",
+  "scripts": {
+    "watch-js": "./node_modules/.bin/babel src -d bundle --experimental -w",
+    "start": "npm run watch-js & npm run dev-server & npm run server",
+    "build": "npm run clean && ./node_modules/.bin/babel src -d bundle --experimental"
+  },
+  "engines": {
+    "node": "0.12.4",
+    "npm": "2.10.1"
+  },
+  "keywords": [
+    "webpack",
+    "react"
+  ],
+  "author": "playwolsey",
+  "license": "MIT",
+  "devDependencies": {
+    "babel": "^5.8.21",
+    "babel-core": "^5.8.3",
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.15.5",
+    "file-loader": "^0.8.4",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-uglify": "^1.4.0",
+    "gulp-webpack": "^1.5.0",
+    "node-libs-browser": "^0.5.2",
+    "nodemon": "^1.4.1",
+    "react-hot-loader": "^1.2.9",
+    "react-router": "^0.13.3",
+    "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.0",
+    "webpack-dev-server": "^1.10.1"
+  },
+  "dependencies": {
+    "async": "1.4.2",
+    "body-parser": "1.13.3",
+    "cookie-parser": "1.3.5",
+    "errorhandler": "1.4.2",
+    "express": "4.13.1",
+    "express-dot-engine": "~1.0.7",
+    "express.io": "1.1.13",
+    "mongoose": "4.1.3",
+    "morgan": "1.6.1",
+    "node-jsx": "~0.11.0",
+    "react": "^0.13.3",
+    "serve-favicon": "2.3.0",
+    "socket.io": "1.3.6"
+  }
 }
