--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "async": "1.4.2",
     "body-parser": "1.13.3",
     "cookie-parser": "1.3.5",
+    "dot": "^1.0.3",
     "errorhandler": "1.4.2",
     "express": "4.13.1",
     "express-dot-engine": "~1.0.7",
