--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "babel": "^5.8.21",
     "babel-core": "^5.8.3",
     "babel-loader": "^5.3.2",
+    "browser-sync": "^2.8.2",
     "css-loader": "^0.15.5",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-nodemon": "^2.0.4",
     "gulp-uglify": "^1.4.0",
     "gulp-webpack": "^1.5.0",
     "node-libs-browser": "^0.5.2",
